fix : update for get all with paginator